# kata-sr

./: .gitignore  AGENT_1.md  AGENT_2.md  AGENT_3.md  AGENT_4.md  AGENT_5.md  ARCHITECTURE_COUPLING.txt  CLAUDE.md  Cargo.toml  FSRS_IMPLEMENTATION.md  LANGUAGE_SPECIFIC_ANALYSIS.md  NEETCODE_150_CHECKLIST.md  NEETCODE_EXPANSION_SUMMARY.md  NEETCODE_WORKBOOK_GUIDE.md  NEETCODE_WORKBOOK_MAPPING.md  README.md  WORKBOOK_ANALYSIS.md  WORKBOOK_FILE_REFERENCE.md  WORKBOOK_IMPLEMENTATION.md  WORKBOOK_QUICK_START.md  generate_neetcode_katas.py  main.py  pyproject.toml
katas/: CLAUDE.MD  README.md  __init__.py  framework.py  manifest_parser.py  pyproject.toml  pyrightconfig.json  runner.py  template_validator.py
katas/exercises/: __init__.py  conftest.py
katas/exercises/ablate_attention_head/: manifest.toml  reference.py  template.py  test_kata.py
katas/exercises/activation_cache_pair/: manifest.toml  reference.py  template.py  test_kata.py
katas/exercises/activation_patching/: __init__.py  manifest.toml  reference.py  template.py  test_kata.py
katas/exercises/adam_optimizer/: manifest.toml  reference.py  template.py  test_kata.py
katas/exercises/analyze_induction_head/: manifest.toml  reference.py  template.py  test_kata.py
katas/exercises/attention_head_patch/: manifest.toml  reference.py  template.py  test_kata.py
katas/exercises/attention_multihead/: manifest.toml  reference.py  template.py  test_kata.py
katas/exercises/attention_pattern_analysis/: manifest.toml  reference.py  template.py  test_kata.py
katas/exercises/attention_patterns/: manifest.toml  reference.py  template.py  test_kata.py
katas/exercises/attention_qk_similarity/: manifest.toml  reference.py  template.py  test_kata.py
katas/exercises/attention_values/: manifest.toml  reference.py  template.py  test_kata.py
katas/exercises/attention_weights/: manifest.toml  reference.py  template.py  test_kata.py
katas/exercises/auto_property_metaclass/: manifest.toml  reference.py  template.py  test_kata.py
katas/tests/: __init__.py  conftest.py  test_framework.py  test_manifest.py  test_runner.py  test_template_validator.py
(+1286 files in other folders)
