[package]
name = "kata-sr"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.36", features = ["sync", "rt"] }

[dev-dependencies]
tempfile = "3.8"
